-feat : seperated code in deffernnt page

--- a/index.html
+++ b/index.html
@@ -6,146 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barcode Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: "Poppins", sans-serif;
-            background: #f4f7fb;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            padding: 20px;
-            color: #333;
-            height: 100vh;
-            overflow: hidden;
-            margin: 0;
-        }
-
-        h1 {
-            margin-bottom: 15px;
-            text-align: center;
-            color: #1d3557;
-            font-weight: 600;
-        }
-
-        textarea {
-            width: 95%;
-            max-width: 450px;
-            height: 120px;
-            border-radius: 12px;
-            border: 1px solid #ccc;
-            padding: 12px;
-            font-size: 16px;
-            resize: none;
-            outline: none;
-            background: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-        }
-
-        .btn-container {
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 15px;
-        }
-
-        button {
-            background: #4a90e2;
-            color: white;
-            border: none;
-            padding: 10px 18px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: all 0.2s ease-in-out;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        button:hover {
-            background: #357ab8;
-            transform: translateY(-1px);
-        }
-
-        .clear-btn {
-            background: #dc3545;
-        }
-
-        .clear-btn:hover {
-            background: #b02a37;
-        }
-
-        .pdf-btn {
-            background: #28a745;
-        }
-
-        .pdf-btn:hover {
-            background: #218838;
-        }
-
-        .barcode-wrapper {
-            margin-top: 25px;
-            width: 100%;
-            max-width: 1100px;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
-            padding: 20px;
-            overflow-y: auto;
-            overflow-x: hidden;
-            flex: 1;
-            min-height: 0;
-            display: none;
-        }
-
-        .barcode-wrapper.active {
-            display: block;
-        }
-
-        .barcode-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-            gap: 20px;
-            justify-items: center;
-            align-items: center;
-        }
-
-        .barcode-item {
-            background: #f9fafc;
-            border-radius: 10px;
-            padding: 10px 15px;
-            text-align: center;
-            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease;
-            width: 100%;
-            max-width: 220px;
-        }
-
-        .barcode-item:hover {
-            transform: scale(1.03);
-        }
-
-        canvas {
-            max-width: 100%;
-            height: auto;
-        }
-
-        @media (max-width: 768px) {
-            .barcode-container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .barcode-container {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -166,137 +27,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-    <script>
-        const { jsPDF } = window.jspdf;
-
-        const generateBtn = document.getElementById("generateBtn");
-        const clearBtn = document.getElementById("clearBtn");
-        const downloadPdfBtn = document.getElementById("downloadPdfBtn");
-        const barcodeContainer = document.getElementById("barcodeContainer");
-        const codeInput = document.getElementById("codeInput");
-        const barcodeWrapper = document.querySelector(".barcode-wrapper");
-
-        generateBtn.addEventListener("click", () => {
-            const input = codeInput.value.trim();
-            barcodeContainer.innerHTML = "";
-            if (!input) {
-                barcodeWrapper.classList.remove("active");
-                return alert("Please enter some codes!");
-            }
-
-            const codes = input
-                .split(",")
-                .map((c) => c.trim())
-                .filter(Boolean);
-
-            codes.forEach((code) => {
-                const div = document.createElement("div");
-                div.classList.add("barcode-item");
-                const canvas = document.createElement("canvas");
-
-                JsBarcode(canvas, code, {
-                    format: "CODE128",
-                    displayValue: true,
-                    fontSize: 14,
-                    lineColor: "#000",
-                    width: 2,
-                    height: 70,
-                    margin: 8,
-                    background: "#fff",
-                });
-
-                div.appendChild(canvas);
-                barcodeContainer.appendChild(div);
-            });
-
-            barcodeWrapper.classList.add("active");
-        });
-
-        clearBtn.addEventListener("click", () => {
-            codeInput.value = "";
-            barcodeContainer.innerHTML = "";
-            barcodeWrapper.classList.remove("active");
-        });
-
-        downloadPdfBtn.addEventListener("click", async () => {
-            const barcodes = barcodeContainer.querySelectorAll("canvas");
-            if (barcodes.length === 0)
-                return alert("Please generate barcodes first.");
-
-            const pdf = new jsPDF({
-                orientation: "portrait",
-                unit: "mm",
-                format: "a4",
-            });
-            const pageWidth = pdf.internal.pageSize.getWidth();
-            const margin = 10;
-            const barcodeWidth = (pageWidth - margin * 2) / 4;
-            let x = margin,
-                y = 20;
-            let count = 0;
-
-            for (const canvas of barcodes) {
-                const imgData = canvas.toDataURL("image/png", 1.0);
-                pdf.addImage(imgData, "PNG", x, y, barcodeWidth - 5, 30, "", "FAST");
-                x += barcodeWidth;
-                count++;
-
-                if (count % 4 === 0) {
-                    x = margin;
-                    y += 40;
-                    if (y > 260 && count < barcodes.length) {
-                        pdf.addPage();
-                        y = 20;
-                    }
-                }
-            }
-
-            // ✅ Generate timestamp for filename
-            const now = new Date();
-            const timestamp = `${now.getFullYear()}-${String(
-                now.getMonth() + 1,
-            ).padStart(2, "0")}-${String(now.getDate()).padStart(2, "0")}-${String(
-                now.getHours(),
-            ).padStart(2, "0")}-${String(now.getMinutes()).padStart(2, "0")}`;
-            pdf.save(`barcodes-${timestamp}.pdf`);
-        });
-    </script>
-
-    <script>
-        async function trackVisitor() {
-            try {
-                // Get IP info from free API
-                const ipData = await fetch("https://api.ipify.org?format=json");
-                const ipJson = await ipData.json();
-
-                const message = `
-New Visitor :rocket:
-IP: ${ipJson.ip}
-Page: ${window.location.href}
-Browser: ${navigator.userAgent}
-Time: ${new Date().toLocaleString()}
-        `; // Send to Telegram
-
-                await fetch(
-                    "https://api.telegram.org/bot8378355552:AAGaszNTkkFu1KMbOBzf-_1HFXSMYwViSfA/sendMessage",
-                    {
-                        method: "POST",
-                        headers: {
-                            "Content-Type": "application/json",
-                        },
-                        body: JSON.stringify({
-                            chat_id: "640885701",
-                            text: message,
-                        }),
-                    },
-                );
-            } catch (error) {
-                console.log("Tracking failed");
-            }
-        }
-
-        trackVisitor();
-    </script>
+    <script src="main.js"></script>
+    <script src="bot.js"></script>
 </body>
 
 </html>
