--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barcode Generator</title>
+    <title>Code Generator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h3>Barcode Generator</h3>
+    <h3>Code Generator</h3>
+
+    <div class="mode-container">
+        <button id="barcodeModeBtn" class="mode-btn active">Barcode Mode</button>
+        <button id="qrModeBtn" class="mode-btn">QR Mode</button>
+    </div>
 
     <textarea id="codeInput" placeholder="Enter codes separated by commas..."></textarea>
 
@@ -25,6 +30,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <script src="main.js"></script>
